--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         // ==========================================
 
         const initialCardData = [
-            { id: 'title', emoji: '🍇', text: '성령의\n9가지 열매' },
+            { id: 'title', emoji: '🍇', text: '성령의\n열매' },
             { id: 'love', emoji: '❤️', text: '사랑' },
             { id: 'joy', emoji: '😊', text: '희락' },
             { id: 'peace', emoji: '🕊️', text: '화평' },
